--- a/favthingsstyle.css
+++ b/favthingsstyle.css
@@ -1,9 +1,14 @@
 
+
+p {
+
+}
+
 h1 {
     font-size: 400%;
     font-weight: bold;
     color: darkblue;
-    text-align: center;
+    text-align: center
 }
 
 h2 {
@@ -11,12 +16,14 @@ h2 {
     font-style: bold;
     text-decoration: underline;
 
+}
+
 
 body {
     background: powderblue;
     color: darkblue;
     font-size: 16pt;
     font-family: 'Oswald', sans-serif;
-}
 
+}
 
