--- a/myfamilystyle.css
+++ b/myfamilystyle.css
@@ -4,22 +4,15 @@ p {
 
 }
 
-body {
-    background: powderblue;
-    color: darkblue;
-    font-size: 16pt;
-    font-family: 'Oswald', sans-serif;
-
 h1 {
-    font-size: 200%;
+    font-size: 400%;
     font-weight: bold;
     color: darkblue;
-    text-align: center;
-    text-decoration: underline;
+    text-align: center
 }
 
 h2 {
-    font-size: 100%;
+    font-size: 150%;
     font-style: bold;
     text-decoration: underline;
 
@@ -30,7 +23,13 @@ h3 {
     text-align: center;
 
 }
+body {
+    background: powderblue;
+    color: darkblue;
+    font-size: 16pt;
+    font-family: 'Oswald', sans-serif;
 
+}
 
 
 
