--- a/favthingsstyle.css
+++ b/favthingsstyle.css
@@ -1,5 +1,3 @@
-
-
 p {
 
 }
@@ -8,7 +6,7 @@ h1 {
     font-size: 400%;
     font-weight: bold;
     color: darkblue;
-    text-align: center
+    text-align: center;
 }
 
 h2 {
@@ -18,7 +16,6 @@ h2 {
 
 }
 
-
 body {
     background: powderblue;
     color: darkblue;
@@ -26,4 +23,3 @@ body {
     font-family: 'Oswald', sans-serif;
 
 }
-
